fix visibility title filter options

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -122,10 +122,11 @@ nav h1 a {
 }
 .filter-options h2 {
   color: #fff;
-  font-size: 1rem;
-  font-weight: 700;
+  font-size: 2em;
+  font-weight: 300;
   line-height: 1;
   margin: 0 20px;
+  letter-spacing: 6px;
 }
 .filter-options select {
   background-color: #fff;
